src/tests/evaluation_error/unknown_operator_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__unknown_operator_integer_infix_expression__test_unknown_operator_integer_infix_expression_case_1_evaluation_error.snap
---
source: src/tests/evaluation_error/unknown_operator_integer_infix_expression/mod.rs
assertion_line: 32
expression: error
---
Err(
    "Unknown operator, the + infix operator is not supported for operands of type BOOLEAN.",
)
