src/tests/evaluation_error/unknown_operator_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__unknown_operator_integer_infix_expression__test_unknown_operator_integer_infix_expression_case_1_syntax_analysis.snap
---
source: src/tests/evaluation_error/unknown_operator_integer_infix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Infix {
            left_hand: Boolean {
                literal: false,
            },
            operator: Plus,
            right_hand: Boolean {
                literal: true,
            },
        },
    },
]
