src/tests/evaluation_error/unknown_operator_integer_infix_expression/snapshots/monkey_interpreter__tests__evaluation_error__unknown_operator_integer_infix_expression__test_unknown_operator_integer_infix_expression_case_3_lexical_analysis.snap
---
source: src/tests/evaluation_error/unknown_operator_integer_infix_expression/mod.rs
assertion_line: 19
expression: tokens
---
[
    PositionedToken {
        token: True,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Multiply,
        position: Position {
            line: 1,
            column: 6,
        },
    },
    PositionedToken {
        token: True,
        position: Position {
            line: 1,
            column: 8,
        },
    },
]
